# AbstractDataTypes

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AbstractDataTypes.sln  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
.github/workflows/: ci.yml  github-actions-demo.yml
QueueArrayRepresentation/: CMakeLists.txt  QueueArrayRepresentation.cpp  QueueArrayRepresentation.hpp  QueueArrayRepresentationExample.cpp
QueueArrayRepresentation/tests/: QueueArrayRepresentationTest.cpp
lib/Debug/: gtest_main.lib
src/QueueArrayRepresentation/: QueueArrayRepresentation.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  TestQueueArrayRepresentation.cpp  TestQueueArrayRepresentation.vcxproj  TestQueueArrayRepresentation.vcxproj.filters  cmake_install.cmake
tests/TestQueueArrayRepresentation.dir/Debug/TestQueu.134836BF.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  TestQueueArrayRepresentation.lastbuildstate
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
